--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,27 +1,21 @@
 ---
 galaxy_info:
   author: Tomoyuki Sakurai
-  description: Configures something
+  description: Install and configure influxdb
   company: N/A
   license: BSD
   min_ansible_version: 2.0
   platforms:
-  - name: FreeBSD
-    versions:
-    - 11.2
-#  - name: OpenBSD
-#    versions:
-#    - 6.2
-#    - 6.3
-#  - name: Ubuntu
-#    versions:
-#    - xenial
-#    - bionic
-#  - name: EL
-#    versions:
-#    - 7
-
+    - name: FreeBSD
+      versions:
+        - 11.2
+    - name: OpenBSD
+      versions:
+        - 6.4
+    - name: Ubuntu
+      versions:
+        - xenial
+        - bionic
   galaxy_tags:
-    - system
-#dependencies:
-#  - foo.role
+    - influxdb
+dependencies: []
