--- a/tasks/install-Debian.yml
+++ b/tasks/install-Debian.yml
@@ -1,5 +1,24 @@
 ---
 
+- name: Install python packages for database management by ansible
+  apt:
+    name: "{{ item }}"
+    state: present
+  with_items:
+    - python-requests
+    # XXX pip is required for latest python-influxdb
+    - "python{% if ansible_python['version']['major'] > '2' %}{{ ansible_python['version']['major'] }}{% endif %}-pip"
+
+- name: Install python-influxdb
+  # XXX install python-influxdb because the one in the official package system
+  # is too old. version 4.1.0, which supports `retries`, or later, is required.
+  pip:
+    name: influxdb
+    # XXX workaround `its parent directory is not owned by the current user`
+    # error when using pip with sudo.
+    extra_args: --no-cache-dir
+    state: present
+
 - name: Install influxdb
   apt:
     name: "{{ influxdb_package }}"
