--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -16,3 +16,4 @@ influxdb_admin_password: ""
 influxdb_include_x509_certificate: no
 influxdb_tls: no
 influxdb_tls_validate_certs: yes
+influxdb_management_packages: "{{ __influxdb_management_packages }}"
