--- a/tasks/install-FreeBSD.yml
+++ b/tasks/install-FreeBSD.yml
@@ -2,11 +2,8 @@
 
 - name: Install python packages for database management by ansible
   pkgng:
-    name: "{{ item }}"
+    name: "{{ influxdb_management_packages }}"
     state: present
-  with_items:
-    - databases/py-influxdb
-    - www/py-requests
 
 - name: Install influxdb
   pkgng:
