bugfix: introduce influxdb_log_dir

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -3,6 +3,7 @@ influxdb_user: "{{ __influxdb_user }}"
 influxdb_group: "{{ __influxdb_group }}"
 influxdb_package: "{{ __influxdb_package }}"
 influxdb_db_dir: "{{ __influxdb_db_dir }}"
+influxdb_log_dir: "{{ __influxdb_log_dir }}"
 influxdb_service: "{{ __influxdb_service }}"
 influxdb_conf_dir: "{{ __influxdb_conf_dir }}"
 influxdb_conf_file_name: "{{ __influxdb_conf_file_name }}"
