--- a/vars/FreeBSD.yml
+++ b/vars/FreeBSD.yml
@@ -3,6 +3,7 @@ __influxdb_user: influxd
 __influxdb_group: influxd
 __influxdb_package: influxdb
 __influxdb_db_dir: /var/db/influxdb
+__influxdb_log_dir: /var/log/influxdb
 __influxdb_conf_dir: /usr/local/etc
 __influxdb_conf_file_name: influxd.conf
 __influxdb_service: influxd
