--- a/vars/OpenBSD.yml
+++ b/vars/OpenBSD.yml
@@ -3,6 +3,7 @@ __influxdb_user: _influx
 __influxdb_group: _influx
 __influxdb_package: influxdb
 __influxdb_db_dir: /var/influxdb
+__influxdb_log_dir: /var/log/influxdb
 __influxdb_conf_dir: /etc/influxdb
 __influxdb_conf_file_name: influxdb.conf
 __influxdb_service: influxdb
