--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -15,6 +15,7 @@ provisioner:
   ansible_extra_flags: <%= ENV['ANSIBLE_EXTRA_FLAGS'] %>
   requirements_path: requirements.yml
   http_proxy: <%= ENV['ANSIBLE_PROXY'] %>
+  no_proxy: 127.0.0.1,localhost
   idempotency_test: true
   additional_copy_path:
     - extra_modules
