--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -2,6 +2,7 @@
 influxdb_user: "{{ __influxdb_user }}"
 influxdb_group: "{{ __influxdb_group }}"
 influxdb_package: "{{ __influxdb_package }}"
+influxdb_extra_packages: "{{ __influxdb_extra_packages }}"
 influxdb_db_dir: "{{ __influxdb_db_dir }}"
 influxdb_log_dir: "{{ __influxdb_log_dir }}"
 influxdb_service: "{{ __influxdb_service }}"
