--- a/tasks/install-OpenBSD.yml
+++ b/tasks/install-OpenBSD.yml
@@ -10,6 +10,11 @@
     name: "{{ influxdb_package }}"
     state: present
 
+- name: Install influxdb_extra_packages
+  openbsd_pkg:
+    name: "{{ influxdb_extra_packages }}"
+    state: present
+
 - name: Enable influxdb_service
   service:
     name: "{{ influxdb_service }}"
