--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -23,20 +23,31 @@ provisioner:
     - library
 
 platforms:
-  - name: freebsd-12.0-amd64
+  - name: freebsd-12.1-amd64
     driver:
-      box: trombik/ansible-freebsd-12.0-amd64
+      box: trombik/ansible-freebsd-12.1-amd64
       box_check_update: false
     driver_config:
       ssh:
         shell: '/bin/sh'
     provisioner:
       extra_vars:
-        ansible_python_interpreter: '/usr/local/bin/python'
+        ansible_python_interpreter: '/usr/local/bin/python3'
 
-  - name: openbsd-6.5-amd64
+  - name: openbsd-6.6-amd64
     driver:
-      box: trombik/ansible-openbsd-6.5-amd64
+      box: trombik/ansible-openbsd-6.6-amd64
+      box_check_update: false
+    driver_config:
+      ssh:
+        shell: '/bin/sh'
+    provisioner:
+      extra_vars:
+        ansible_python_interpreter: '/usr/local/bin/python3'
+
+  - name: openbsd-6.7-amd64
+    driver:
+      box: trombik/ansible-openbsd-6.7-amd64
       box_check_update: false
     driver_config:
       ssh:
