--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -23,9 +23,9 @@ provisioner:
     - library
 
 platforms:
-  - name: freebsd-12.1-amd64
+  - name: freebsd-12.2-amd64
     driver:
-      box: trombik/ansible-freebsd-12.1-amd64
+      box: trombik/ansible-freebsd-12.2-amd64
       box_check_update: false
     driver_config:
       ssh:
@@ -34,9 +34,9 @@ platforms:
       extra_vars:
         ansible_python_interpreter: '/usr/local/bin/python3'
 
-  - name: openbsd-6.6-amd64
+  - name: freebsd-13.0-amd64
     driver:
-      box: trombik/ansible-openbsd-6.6-amd64
+      box: trombik/ansible-freebsd-13.0-amd64
       box_check_update: false
     driver_config:
       ssh:
@@ -45,9 +45,20 @@ platforms:
       extra_vars:
         ansible_python_interpreter: '/usr/local/bin/python3'
 
-  - name: openbsd-6.7-amd64
+  - name: openbsd-6.8-amd64
     driver:
-      box: trombik/ansible-openbsd-6.7-amd64
+      box: trombik/ansible-openbsd-6.8-amd64
+      box_check_update: false
+    driver_config:
+      ssh:
+        shell: '/bin/sh'
+    provisioner:
+      extra_vars:
+        ansible_python_interpreter: '/usr/local/bin/python3'
+
+  - name: openbsd-6.9-amd64
+    driver:
+      box: trombik/ansible-openbsd-6.9-amd64
       box_check_update: false
     driver_config:
       ssh:
