--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -71,6 +71,14 @@ platforms:
     driver:
       box: trombik/ansible-ubuntu-18.04-amd64
       box_check_update: false
+    provisioner:
+      extra_vars:
+        ansible_python_interpreter: '/usr/bin/python3'
+
+  - name: ubuntu-20.04-amd64
+    driver:
+      box: trombik/ansible-ubuntu-20.04-amd64
+      box_check_update: false
 
 suites:
   - name: default
