--- a/vars/Debian.yml
+++ b/vars/Debian.yml
@@ -9,5 +9,5 @@ __influxdb_conf_dir: /etc/influxdb
 __influxdb_conf_file_name: influxdb.conf
 __influxdb_service: influxdb
 __influxdb_management_packages:
-  - python-influxdb
-  - python-requests
+  - python3-influxdb
+  - python3-requests
