--- a/meta/main.yml
+++ b/meta/main.yml
@@ -18,6 +18,9 @@ galaxy_info:
     - name: Ubuntu
       versions:
         - bionic
+    - name: Devuan
+      versions:
+        - beowulf
   galaxy_tags:
     - influxdb
 dependencies: []
