--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -75,6 +75,14 @@ platforms:
       extra_vars:
         ansible_python_interpreter: '/usr/bin/python3'
 
+  - name: devuan-3-amd64
+    driver:
+      box: trombik/ansible-devuan-3-amd64
+      box_check_update: false
+    provisioner:
+      extra_vars:
+        ansible_python_interpreter: '/usr/bin/python3'
+
   - name: ubuntu-20.04-amd64
     driver:
       box: trombik/ansible-ubuntu-20.04-amd64
